--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+.main-container {
+  overflow: auto;
+}
+
 .App {
   text-align: center;
 }
@@ -12,7 +16,12 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
+.div {
+  width: 100%;
+  height: 600px;
+  margin-top: 80px;
+  background-color: #61dafb;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
