--- a/src/components/HomePage/ImgSlidebar/ImgSlidebar.scss
+++ b/src/components/HomePage/ImgSlidebar/ImgSlidebar.scss
@@ -20,10 +20,15 @@
     width: 40px;
   }
 }
+.slick-list {
+  width: 956px;
+}
 
 .slick-initialized {
   margin-top: 80px;
   /* height: 417px; */
+  display: flex !important;
+  justify-content: center;
   padding: 50px 235px;
   background: black;
 }
@@ -33,17 +38,19 @@
 .slick-next {
   //   top: 32%;
   right: 0% !important;
-  //   height: 50px;
+  height: 20px !important;
 }
 .slick-prev {
   left: 0 !important;
+  height: 20px !important;
 }
 .my-slider:hover .slick-slide {
   transform: scale(1.1);
   opacity: 0.8;
 }
 .slick-slide img {
-  height: 220px;
+  height: 260px;
+  max-width: 260px !important;
   margin-right: 10px;
   cursor: pointer;
   transition: transform 0.5s ease-out;
@@ -53,7 +60,7 @@
   transform: scale(1.07);
 }
 .slick-slide {
-  width: 220px !important;
+  width: 260px !important;
   margin-right: 16px;
 }
 .slick-prev:before,
@@ -63,8 +70,8 @@
   /* increase the font size to 24px */
 }
 .slick-prev {
-  margin-left: 12rem !important;
+  margin-left: 24rem !important;
 }
 .slick-next {
-  margin-right: 12.5rem !important;
+  margin-right: 24.5rem !important;
 }
