--- a/src/components/HomePage/ImgSlidebar/ImgSlidebar.scss
+++ b/src/components/HomePage/ImgSlidebar/ImgSlidebar.scss
@@ -1,5 +1,5 @@
 .slider-container {
-  margin-top: 80px;
+  // margin-top: 80px;
   //   margin-left: 0px;
   //   max-width: 1200px;
   //   min-width: 1200px;
